--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h3>Right wing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#nikita">Read</a>
             </div>
             <div class="poster">
                 <img src="andrey0.jpeg" alt="">
@@ -56,7 +56,7 @@
                     <h3>Goalie</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#andrey">Read</a>
             </div>
             <div class="poster">
                 <img src="misha0.jpg" alt="">
@@ -65,7 +65,7 @@
                     <h3>Defence</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#misha">Read</a>
             </div>
             <div class="poster">
                 <img src="brayden1.jpeg" alt="">
@@ -74,7 +74,7 @@
                     <h3>Centre / Left Wing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#brayden">Read</a>
             </div>
             <div class="poster">
                 <img src="misha1.jpg" alt="">
@@ -83,7 +83,7 @@
                     <h3>Defence</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#misha">Read</a>
             </div>
             <div class="poster">
                 <img src="brayden0.jpeg" alt="">
@@ -92,7 +92,7 @@
                     <h3>Centre / Left Wing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#brayden">Read</a>
             </div>
             <div class="poster">
                 <img src="nikita0.jpeg" alt="">
@@ -101,7 +101,7 @@
                     <h3>Right wing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#nikita">Read</a>
             </div>
             <div class="poster">
                 <img src="andrey2.jpg" alt="">
@@ -110,7 +110,7 @@
                     <h3>Goalie</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#andrey">Read</a>
             </div>
             <div class="poster">
                 <img src="steven0.jpg" alt="">
@@ -119,7 +119,7 @@
                     <h3>Centre</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste deleniti impedit iusto tempora ut dolores possimus culpa eos, nostrum quisquam dolore ducimus quo dolorem neque labore eum ullam quidem ipsam?</p>
                 </div>
-                <a href="">Read</a>
+                <a href="#steven">Read</a>
             </div>
             <!-- </div> -->
         </div>
